<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="9dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp">

        <TextView
            android:id="@+id/tv_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textSize="12sp"
            android:text="@string/timestamp_play"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/mode"
            app:layout_constraintTop_toBottomOf="@id/tv_item_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_item_result"
            />
        <TextView
            android:id="@+id/tv_item_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/result"
            app:layout_constraintStart_toEndOf="@+id/tv_item_mode"
            app:layout_constraintTop_toBottomOf="@id/tv_item_time"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_item_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>